fixed problem with spacing of links

--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@
 
 .socials {
   width: 100%;
-  height: 40px;
+  height: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
